--- a/src/app/car-edit/car-edit.component.html
+++ b/src/app/car-edit/car-edit.component.html
@@ -5,11 +5,17 @@
       </mat-card-header>
       <mat-card-content>
         <input type="hidden" name="href" [(ngModel)]="car.href">
+
         <mat-form-field>
           <input matInput placeholder="Car Name" [(ngModel)]="car.name"
                  required name="name" #name>
         </mat-form-field>
       </mat-card-content>
+
+        <mat-form-field>
+          <input matInput placeholder="Owner DNI" [(ngModel)]= "car.ownerDni" required name="ownerDni">
+        </mat-form-field>
+
       <mat-card-actions>
         <button mat-raised-button color="primary" type="submit"
                 [disabled]="!carForm.form.valid">Save</button>
