--- a/src/app/car-edit/car-edit.component.html
+++ b/src/app/car-edit/car-edit.component.html
@@ -1,21 +1,20 @@
 <mat-card>
     <form #carForm="ngForm" (ngSubmit)="save(carForm.value)">
       <mat-card-header>
-        <mat-card-title><h2>{{car.name ? 'Edit' : 'Add'}} Car</h2></mat-card-title>
+        <mat-card-title><h2>{{car.name ? 'Edit' : 'Add'}} Cars</h2></mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <input type="hidden" name="href" [(ngModel)]="car.href">
-
         <mat-form-field>
           <input matInput placeholder="Car Name" [(ngModel)]="car.name"
                  required name="name" #name>
+          
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Owner DNI" [(ngModel)]="car.ownerDni"
+                 required name="ownerDni">
         </mat-form-field>
       </mat-card-content>
-
-        <mat-form-field>
-          <input matInput placeholder="Owner DNI" [(ngModel)]= "car.ownerDni" required name="ownerDni">
-        </mat-form-field>
-
       <mat-card-actions>
         <button mat-raised-button color="primary" type="submit"
                 [disabled]="!carForm.form.valid">Save</button>
